<resources>
    <string name="app_name">Fragrances Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_catalog">Fragrances Catalog</string>
    <string name="fragrance">Fragrance</string>
    <string name="hint_fragrance_name">Name</string>
    <string name="hint_fragrance_ret_price">Retail price</string>
    <string name="hint_fragrance_ws_price">Wholesale price</string>
    <string name="hint_search">Fragrance name</string>
    <string name="save">Save</string>

    <!-- Input fields -->
    <string name="input_fragrance_name">Name</string>
    <string name="input_fragrance_ret_price">Retail price</string>
    <string name="input_fragrance_ws_price">Wholesale price</string>
    <string name="input_fragrance_quantity">Quantity</string>
    <string name="input_fragrance_gender">Select fragrance gender</string>

    <string name="editor">Edit fragrance</string>
    <string name="delete_dialog_msg">Delete this fragrance ?</string>
    <string name="cancel">Cancel</string>
    <string name="no_fragrances_yet">No fragrances have been added yet</string>
    <string name="quantity">Quantity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_to_stock">Add to stock</string>
    <string name="sell_from_stock">Sell from stock</string>
    <string name="cannot_sell">You cannot sell this fragrance as the quantity in stock is 0</string>

    <!--  Action Mode Menu Items -->
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="do_naught">Edit only</string>
    <string name="unisex">Unisex</string>
</resources>
